Auth added to swagger
